--- a/src/app/components/emotionalswiper/emotionalswiper.component.html
+++ b/src/app/components/emotionalswiper/emotionalswiper.component.html
@@ -8,7 +8,7 @@
         <div class="trauma">
           <h4>{{ item.title }}</h4>
           <p>{{ item.description }}</p>
-          <a class="more-link button" [href]="item.link">Read more</a>
+          <a class="more-link button" [routerLink]="item.link">Read more</a>
         </div>
       </div>
     </div>
