--- a/src/app/layout/courses/courses.component.html
+++ b/src/app/layout/courses/courses.component.html
@@ -50,7 +50,7 @@
 
                         </p>
 
-                        <a href="courses-details.html" class="button w-7">Enroll now</a>
+                        <a routerLink="/courses-details" class="button w-7">Enroll now</a>
                     </div>
                 </div>
 
@@ -97,7 +97,7 @@
 
                         </p>
 
-                        <a href="courses-details.html" class="button w-7">Enroll now</a>
+                        <a routerLink="/courses-details" class="button w-7">Enroll now</a>
 
                     </div>
                 </div>
@@ -142,7 +142,7 @@
                             in
                             childhood, thus giving you complete emotional self-awareness.
                         </p>
-                        <a href="courses-details.html" class="button w-7">Enroll now</a>
+                        <a routerLink="/courses-details" class="button w-7">Enroll now</a>
                     </div>
                 </div>
 
@@ -207,7 +207,7 @@
 
 
                         </div>
-                        <a href="courses-details.html" class="button w-7">Enroll now</a>
+                        <a routerLink="/courses-details" class="button w-7">Enroll now</a>
 
                     </div>
                 </div>
