--- a/src/app/layout/home/home.component.html
+++ b/src/app/layout/home/home.component.html
@@ -605,7 +605,7 @@
                     <!-- Left Side Images -->
                     <div class="left-images">
                         <div class="main-img">
-                            <img src="images/books.webp" alt="Woman on computer" loading="lazy">
+                            <img src="images/books.jpg" alt="Woman on computer" loading="lazy">
                         </div>
                         <div class="video-boxes">
                             <img src="images/books2.jpeg" alt="Video thumbnail" loading="lazy">
