--- a/src/app/layout/courses-details/courses-details/courses-details.component.html
+++ b/src/app/layout/courses-details/courses-details/courses-details.component.html
@@ -5,7 +5,7 @@
                     <h3>How To Love and Accept Your Perfect Imperfections</h3>
                     <p>Your Journey To Self-Love. Develop the knowledge, skills, and tools to love and accept your
                         perfect imperfections</p>
-                    <a class="button whitebt" href="courses.html">Enroll Now !</a>
+                    <a class="button whitebt" routerLink="/courses">Enroll Now !</a>
                 </div>
             </div>
         </div>
@@ -19,7 +19,7 @@
                         <!-- Left Side Images -->
                         <div class="left-images sticky6">
                             <div class="main-img">
-                                <img src="images/Imperfections.jpg" />
+                                <img src="images/Imperfections.jpg"  />
                             </div>
                             <div class="video-boxes mt22">
                                 <img src="images/course.jpeg"/>
@@ -434,7 +434,7 @@
 
 
                         <div class="industry-grid">
-                            <div class="faq-wrapper blog-detailsdhidee">
+                            <!-- <div class="faq-wrapper blog-detailsdhidee">
 
                                 <div class="faq-item">
                                     <div class="question">When does the course start and finish?</div>
@@ -533,12 +533,12 @@
 
 
 
-                            </div>
+                            </div> -->
 
 
 
 
-
+<app-faq-section/>
 
                         </div>
 
@@ -558,226 +558,11 @@
                 </div>
                 <div class="container">
 
-                    <div class="swiper mySwiper swiper-initialized swiper-horizontal swiper-backface-hidden">
-                        <div class="swiper-wrapper" id="swiper-wrapper-e333e1a637c3dc05" aria-live="polite"
-                            style="transition-duration: 0ms; transform: translate3d(-456.667px, 0px, 0px); transition-delay: 0ms;">
-
-                            <div class="swiper-slide swiper-slide-prev" role="group" aria-label="1 / 4"
-                                data-swiper-slide-index="0" style="width: 426.667px; margin-right: 30px;">
-                                <div class="card">
-                                    <div class="card-img">
-                                        <a href="courses.html">
-                                            <img src="./images/price-change1.jpeg" alt="Course" class="preview">
-
-                                        </a>
-                                    </div>
-
-                                    <div class="card-body">
-                                        <div class="rbt-card-top">
-                                            <div class="stars">
-
-                                                <ul>
-                                                    <li><i class="fa-solid fa-star"></i></li>
-                                                    <li><i class="fa-solid fa-star"></i></li>
-                                                    <li><i class="fa-solid fa-star"></i></li>
-                                                    <li><i class="fa-solid fa-star"></i></li>
-                                                    <li><i class="fa-solid fa-star"></i></li>
-                                                </ul> <span>(15 Reviews)</span>
-                                            </div>
-                                        </div>
-                                        <h4>Begin Your Journey To Emotional Authenticity</h4>
-                                        <p>Learn the first, foundational steps in developing Emotional Authenticity</p>
-                                        <div class="info">
-                                            <div><i class="fa-solid fa-book"></i>12 Lessons</div>
-                                            <div><i class="fa-solid fa-user-tie"></i>50 Students</div>
-                                        </div>
-                                        <div class="author">
-                                            <img src="./images/course.jpeg" alt="Author">
-                                            <div class="author-info">Course • By Kenny Weiss </div>
-                                        </div>
-                                        <div class="price-row">
-                                            <div class="price">
-                                                <span class="current-price">$29.77</span>
-                                                <span class="original-price">$120</span>
-                                            </div>
-                                            <a href="courses.html" class="button ">
-                                                Learn More <span class="arrow"><i
-                                                        class="fa-solid fa-arrow-right"></i></span>
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="swiper-slide swiper-slide-active" role="group" aria-label="2 / 4"
-                                data-swiper-slide-index="1" style="width: 426.667px; margin-right: 30px;">
-                                <div class="card">
-                                    <div class="card-img">
-                                        <a href="courses.html">
-                                            <img src="./images/price-change2.png" alt="Course" class="preview">
-
-                                        </a>
-                                    </div>
-
-                                    <div class="card-body">
-                                        <div class="rbt-card-top">
-                                            <div class="stars">
-
-                                                <ul>
-                                                    <li><i class="fa-solid fa-star"></i></li>
-                                                    <li><i class="fa-solid fa-star"></i></li>
-                                                    <li><i class="fa-solid fa-star"></i></li>
-                                                    <li><i class="fa-solid fa-star"></i></li>
-                                                    <li><i class="fa-solid fa-star"></i></li>
-                                                </ul> <span>(15 Reviews)</span>
-                                            </div>
-                                        </div>
-                                        <h4>The Complete Emotional Authenticity Method (one-time Purchase)</h4>
-                                        <p>Overcome your Worst Day Cycle and reclaim your authentic self with Emotional
-                                            Authenticity</p>
-                                        <div class="info">
-                                            <div><i class="fa-solid fa-book"></i>12 Lessons</div>
-                                            <div><i class="fa-solid fa-user-tie"></i>50 Students</div>
-                                        </div>
-                                        <div class="author">
-                                            <img src="./images/course.jpeg" alt="Author">
-                                            <div class="author-info">Course • By Kenny Weiss </div>
-                                        </div>
-                                        <div class="price-row">
-                                            <div class="price">
-                                                <span class="current-price">$29.77</span>
-                                                <span class="original-price">$120</span>
-                                            </div>
-                                            <a href="courses.html" class="button ">
-                                                Learn More <span class="arrow"><i
-                                                        class="fa-solid fa-arrow-right"></i></span>
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="swiper-slide swiper-slide-next" role="group" aria-label="3 / 4"
-                                data-swiper-slide-index="2" style="width: 426.667px; margin-right: 30px;">
-                                <div class="card">
-                                    <div class="card-img">
-                                        <a href="courses.html">
-                                            <img src="./images/price-change3.png" alt="Course" class="preview">
-
-                                        </a>
-                                    </div>
-
-                                    <div class="card-body">
-                                        <div class="rbt-card-top">
-                                            <div class="stars">
-
-                                                <ul>
-                                                    <li><i class="fa-solid fa-star"></i></li>
-                                                    <li><i class="fa-solid fa-star"></i></li>
-                                                    <li><i class="fa-solid fa-star"></i></li>
-                                                    <li><i class="fa-solid fa-star"></i></li>
-                                                    <li><i class="fa-solid fa-star"></i></li>
-                                                </ul> <span>(15 Reviews)</span>
-                                            </div>
-                                        </div>
-                                        <h4>The Complete Emotional Authenticity Method Subscription</h4>
-                                        <p>Overcome your Worst Day Cycle and reclaim your authentic self with Emotional
-                                            Authenticity</p>
-                                        <div class="info">
-                                            <div><i class="fa-solid fa-book"></i>12 Lessons</div>
-                                            <div><i class="fa-solid fa-user-tie"></i>50 Students</div>
-                                        </div>
-
-                                        <div class="author">
-                                            <img src="./images/course.jpeg" alt="Author">
-                                            <div class="author-info">Course • By Kenny Weiss </div>
-                                        </div>
-                                        <div class="price-row">
-                                            <div class="price">
-                                                <span class="current-price">$77/month</span>
-                                                <span class="original-price">$120</span>
-                                            </div>
-                                            <a href="courses.html" class="button ">
-                                                Learn More <span class="arrow"><i
-                                                        class="fa-solid fa-arrow-right"></i></span>
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="swiper-slide" role="group" aria-label="4 / 4" data-swiper-slide-index="3"
-                                style="width: 426.667px; margin-right: 30px;">
-                                <div class="card">
-                                    <div class="card-img">
-                                        <a href="courses.html">
-                                            <img src="./images/price-change1.jpeg" alt="Course" class="preview">
-
-                                        </a>
-                                    </div>
-
-                                    <div class="card-body">
-                                        <div class="rbt-card-top">
-                                            <div class="stars">
-
-                                                <ul>
-                                                    <li><i class="fa-solid fa-star"></i></li>
-                                                    <li><i class="fa-solid fa-star"></i></li>
-                                                    <li><i class="fa-solid fa-star"></i></li>
-                                                    <li><i class="fa-solid fa-star"></i></li>
-                                                    <li><i class="fa-solid fa-star"></i></li>
-                                                </ul> <span>(15 Reviews)</span>
-                                            </div>
-                                        </div>
-                                        <h4>Begin Your Journey To Emotional Authenticity</h4>
-                                        <p>Learn the first, foundational steps in developing Emotional Authenticity</p>
-                                        <div class="info">
-                                            <div><i class="fa-solid fa-book"></i>12 Lessons</div>
-                                            <div><i class="fa-solid fa-user-tie"></i>50 Students</div>
-                                        </div>
-                                        <div class="author">
-                                            <img src="./images/course.jpeg" alt="Author">
-                                            <div class="author-info">Course • By Kenny Weiss </div>
-                                        </div>
-                                        <div class="price-row">
-                                            <div class="price">
-                                                <span class="current-price">$29.77</span>
-                                                <span class="original-price">$120</span>
-                                            </div>
-                                            <a href="courses.html" class="button ">
-                                                Learn More <span class="arrow"><i
-                                                        class="fa-solid fa-arrow-right"></i></span>
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                        </div>
-
-                        <!-- Navigation buttons -->
-                        <div class="swiper-button-next" tabindex="0" role="button" aria-label="Next slide"
-                            aria-controls="swiper-wrapper-e333e1a637c3dc05"></div>
-                        <div class="swiper-button-prev" tabindex="0" role="button" aria-label="Previous slide"
-                            aria-controls="swiper-wrapper-e333e1a637c3dc05"></div>
-
-                        <!-- Pagination dots -->
-                        <div
-                            class="swiper-pagination swiper-pagination-clickable swiper-pagination-bullets swiper-pagination-horizontal">
-                            <span class="swiper-pagination-bullet" tabindex="0" role="button"
-                                aria-label="Go to slide 1"></span><span
-                                class="swiper-pagination-bullet swiper-pagination-bullet-active" tabindex="0"
-                                role="button" aria-label="Go to slide 2" aria-current="true"></span><span
-                                class="swiper-pagination-bullet" tabindex="0" role="button"
-                                aria-label="Go to slide 3"></span><span class="swiper-pagination-bullet" tabindex="0"
-                                role="button" aria-label="Go to slide 4"></span>
-                        </div>
-                        <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
-                    </div>
+                   <app-course-slider/>
 
                 </div>
                 <div class="button-row canter">
-                    <a href="courses.html" class="button">View All Products</a>
+                    <a routerLink="/courses" class="button">View All Products</a>
                 </div>
 
             </section>
