--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -36,7 +36,7 @@
                         [routerLinkActiveOptions]="{ exact: true }">Books</a></li>
 
                 <li class="dropreletiv" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: false }">
-                    <span>Free Resources</span> <i class="fa-solid fa-chevron-down"></i>
+                    <a>Free Resources</a> <i class="fa-solid fa-chevron-down"></i>
                     <ul class="doropmenu">
                         <li><a routerLink="/resources" routerLinkActive="active"
                                 [routerLinkActiveOptions]="{ exact: true }">Resources</a></li>
