--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,7 +1,7 @@
 @import "aos/dist/aos.css";
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
- 
+
 * {
     margin: 0;
     padding: 0;
@@ -48,46 +48,58 @@ h4 {
 }
 
 /*******header -color *********/
-header.header.blacktext.homenav ul.navmenu li  a.active {
+header.header.blacktext.homenav ul.navmenu li a.active {
     color: #fff;
 }
 
-header.header.blacktext .navmenu a.active,header.header.blacktext .navmenu li.active > span,header.header.blacktext .navmenu li.active > i  {
-  color: rgb(187, 160, 86)!important;   
-   
+header.header.blacktext .navmenu a.active, 
+header.header.blacktext .navmenu li.active>i,
+header.header.blacktext .navmenu li.active>a  {
+    color: rgb(187, 160, 86) !important;
+
 }
 
-.header.bgcolor .flexsocial.whitei i ,header.header.blacktext.homenav.bgcolor .flexsocial.whitei i {
+.header.bgcolor .flexsocial.whitei i,
+header.header.blacktext.homenav.bgcolor .flexsocial.whitei i {
     color: #000000;
 }
+
 .flexsocial.whitei i {
     color: #000000;
 }
 
-header.header.blacktext.homenav a.logo-brand img { filter: brightness(0) invert(1); }
+header.header.blacktext.homenav a.logo-brand img {
+    filter: brightness(0) invert(1);
+}
 
 header.header.blacktext.homenav,
 header.header.blacktext.homenav .flexsocial.whitei i,
 header.header.blacktext.homenav i,
-header.header.blacktext.homenav ul.navmenu li span, 
-header.header.blacktext.homenav ul.navmenu li i, 
+header.header.blacktext.homenav ul.navmenu li i,
 header.header.blacktext.homenav ul.navmenu li a {
     color: #ffffff;
 }
- 
-header.header.blacktext.homenav.bgcolor a.logo-brand img  {  filter: brightness(0) saturate(100%); }
 
-header.header.blacktext.homenav.bgcolor  ul.navmenu a ,header.header.blacktext.homenav.bgcolor  ul.navmenu span,header.header.blacktext.homenav.bgcolor  ul.navmenu i  { 
-    color: #000; 
-}
-header.header.blacktext.bgcolor  ul.navmenu a ,header.header.blacktext.bgcolor  ul.navmenu span,header.header.blacktext.bgcolor  ul.navmenu i  { 
-    color: #000; 
-}
-header.header.blacktext  ul.navmenu a ,header.header.blacktext  ul.navmenu span,header.header.blacktext  ul.navmenu i  { 
-    color: #000; 
+header.header.blacktext.homenav.bgcolor a.logo-brand img {
+    filter: brightness(0) saturate(100%);
 }
 
- 
+header.header.blacktext.homenav.bgcolor ul.navmenu a,
+header.header.blacktext.homenav.bgcolor ul.navmenu i {
+    color: #000;
+}
+
+header.header.blacktext.bgcolor ul.navmenu a,
+header.header.blacktext.bgcolor ul.navmenu i {
+    color: #000;
+}
+
+header.header.blacktext ul.navmenu a,
+header.header.blacktext ul.navmenu i {
+    color: #000;
+}
+
+
 .header.bgcolor {
     top: 0;
     background-color: #FFFFFF;
@@ -98,9 +110,11 @@ header.header.blacktext  ul.navmenu a ,header.header.blacktext  ul.navmenu span,
 .header.bgcolor .topbar button.menu-toggle i {
     color: #000;
 }
+
 header.header.blacktext.homenav ul.navmenu li ul.doropmenu li a {
     color: #000000;
 }
+
 /*******header -color *********/
 
 
@@ -192,12 +206,12 @@ a.button.mt3 {
 .audible-button:hover {
     background-color: #f5f5f5;
 }
- 
+
 
 header.header.blacktext a.logo-brand img {
     filter: brightness(0) saturate(100%);
 }
- 
+
 .st-row i.fa-solid.fa-star {
     color: #ffbc00;
 }
@@ -216,12 +230,14 @@ img.form-bac {
     height: 100%;
 }
 
-ul.navmenu li a, ul.navmenu li span, ul.navmenu li i {
+ul.navmenu li a,
+ul.navmenu li span,
+ul.navmenu li i {
     font-size: 0.8em;
     cursor: pointer;
 }
 
- 
+
 .doropmenu li:hover {
     padding-left: 20px;
 }
@@ -290,7 +306,7 @@ header.header.bg .nav a:hover {
     color: #000000;
 }
 
- 
+
 .white {
     color: #fff;
 }
@@ -329,7 +345,7 @@ a.logo-brand {
     padding: 0 20px;
     box-sizing: border-box;
 }
-  
+
 
 
 
@@ -394,12 +410,12 @@ a.sociallink {
 .audio-player iframe {
     height: 100px !important;
 }
- 
+
 header.header {
     width: 100%;
     position: fixed;
     z-index: 999;
-    padding: 15px 0; 
+    padding: 15px 0;
 }
 
 
@@ -2192,8 +2208,7 @@ h5.info-title {
     border-radius: 12px;
     padding: 20px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    display: flex
-;
+    display: flex;
     align-items: center;
     justify-content: left;
     height: 58px;
@@ -2203,8 +2218,7 @@ h5.info-title {
 .industry-card .icon {
     position: absolute;
     left: 0;
-    display: flex
-;
+    display: flex;
     align-items: center;
     justify-content: center;
     width: 60px;
@@ -2236,10 +2250,12 @@ h5.info-title {
     position: absolute;
     right: 20px;
 }
+
 .industry-card a:hover {
-    color: #ffffff; 
+    color: #ffffff;
     background-color: #512570c5;
 }
+
 .your-journey-Self-love {
     position: relative;
     align-items: start;
@@ -2341,8 +2357,7 @@ section.Self-love.faqbg {
     background-color: #0000002e;
     text-align: center;
     flex-direction: column;
-    display: flex
-;
+    display: flex;
     align-items: center;
     justify-content: center;
 }
@@ -2409,10 +2424,12 @@ section.Self-love.faqbg {
 .contact-box a.button.blockbutton {
     display: block;
 }
+
 .contact-box {
     text-align: center;
     margin-bottom: 10px;
 }
+
 .post-meta {
     display: flex;
     align-items: center;
@@ -2515,8 +2532,7 @@ a.buttobooksec {
 .question {
     font-size: 1.1rem;
     position: relative;
-    display: flex
-;
+    display: flex;
     align-items: center;
     cursor: pointer;
     color: #282727;
@@ -2867,14 +2883,14 @@ iframe {
     padding: 8px;
     border-radius: 50px;
     top: 40%;
-    width: 50px!important;
-    height: 50px!important;
+    width: 50px !important;
+    height: 50px !important;
     border: 2px solid #BBA056;
 }
 
 .swiper-button-prev::after,
 .swiper-button-next::after {
-    font-size: 17px!important;
+    font-size: 17px !important;
     color: #BBA056;
     font-weight: 900;
 }
@@ -3166,9 +3182,10 @@ section.self-development::after {
     z-index: 0;
 }
 
-section.self-development.bg2::after { 
-    background-color: rgb(0 23 15 / 38%); 
+section.self-development.bg2::after {
+    background-color: rgb(0 23 15 / 38%);
 }
+
 section.self-development.bg2 {
     margin-top: 40px;
 }
@@ -3545,7 +3562,7 @@ ul.covered-list li {
 .event-details-right {
     position: relative;
     padding-top: 70px;
-} 
+}
 
 section.section-panel {
     padding: 60px 0;
@@ -5359,9 +5376,11 @@ section.sourses-section .right-content h3 {
     flex: 1;
     min-width: 300px;
 }
+
 .right {
     position: relative;
 }
+
 .description {
     margin-bottom: 24px;
 }
@@ -5397,8 +5416,7 @@ section.sourses-section .right-content h3 {
 
 .feature-icon {
     background-color: #51257057;
-    display: flex
-;
+    display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -6283,7 +6301,7 @@ a.button.border-only {
         gap: 20px;
     }
 
-    ul.navmenu li a {
+    ul.navmenu li a, ul.navmenu li i {
         font-size: 0.7em;
     }
 
@@ -6385,7 +6403,7 @@ a.button.border-only {
 
     button.menu-toggle i {
         font-size: 40px;
-        color: #ffffff;
+        color: #000000;
         transition: 0.5s;
         position: absolute;
     }
@@ -6394,15 +6412,29 @@ a.button.border-only {
         color: #000;
         scale: 0;
     }
-
+.header.bgcolor {  
+    animation:inherit;
+}
     .navbars.openmenu i.open {
         scale: 0;
     }
 
     .navbars.openmenu i.close {
         scale: 1.1;
+        color: #000 !important;
     }
 
+      .navbars.openmenu ul.navmenu li a.contact-nav {
+        color: #ffffff !important;
+    }
+
+    .navbars.openmenu ul.navmenu li a,
+    .navbars.openmenu i {
+        color: #000 !important;
+    }
+.navbars.openmenu img {
+    filter: brightness(0) saturate(100%) !important;
+}
 
     .topbar {
         display: flex;
@@ -6540,7 +6572,7 @@ a.button.border-only {
         padding: 50px 5%;
     }
 
-  .flex-who-we-are {
+    .flex-who-we-are {
         gap: 205px;
     }
 
@@ -6682,7 +6714,7 @@ a.button.border-only {
         font-size: 2em;
     }
 
-    ul.navmenu li a {
+    ul.navmenu li a,ul.navmenu li i  {
         font-size: 1.3em;
         font-weight: 600;
     }
@@ -6871,12 +6903,13 @@ a.button.border-only {
         bottom: -40px;
     }
 
-.video-boxes.mt22{
+    .video-boxes.mt22 {
         width: 195px;
         border: 6px solid #fff;
         bottom: -140px;
     }
-.flex-who-we-are {
+
+    .flex-who-we-are {
         gap: 170px;
     }
 
@@ -7242,7 +7275,7 @@ a.button.border-only {
         text-align: center;
     }
 
-   .industry-card .icon {
+    .industry-card .icon {
         border-radius: 100%;
         width: 65px;
         height: 65px;
