--- a/src/app/layout/blog/blog.component.html
+++ b/src/app/layout/blog/blog.component.html
@@ -1,6 +1,6 @@
 
 <div class="blog">
-  <main class="pt-1">
+  <main class="mt">
 
         <section class="blog-section">
             <div class="container">
