--- a/src/app/layout/contact/contact.component.html
+++ b/src/app/layout/contact/contact.component.html
@@ -1,4 +1,4 @@
- <main class="pt-1">
+ <main class="mt">
         <div class="contactsection">
             <div class="container">
                 <div class="contact-into" >
