--- a/src/app/layout/feelings-wheel/feelings-wheel.component.html
+++ b/src/app/layout/feelings-wheel/feelings-wheel.component.html
@@ -1,4 +1,4 @@
- <main class="pt-1">
+ <main class="mt">
        <section class="wordsendsicyel">
             <div class="container">
                 <div class="flexwordsendcycal">
@@ -55,8 +55,8 @@
                             disconnected from your authentic self. Download
                             it below to get started.</p>
                         <div class="button-row canter">
-                            <a class="button whitebt" href="#">Enroll
-                                now</a>
+                           <a routerLink="/" class="button whitebt">Enroll now</a>
+
 
                         </div>
                     </div>
@@ -74,9 +74,8 @@
                             every area of your daily life and keeping you
                             disconnected from your authentic self. Download
                             it below to get started.</p>
-                        <div class="button-row canter">
-                            <a class="button while" href="books.html">Available Now at Barnes
-                                &amp; Noble</a>
+                        <div class="button-row canter">  
+                                <a routerLink="/books" class="button while">Available Now at Barnes & Noble</a>
                         </div>
                     </div>
 
