--- a/src/app/layout/meet-kenny/meet-kenny.component.html
+++ b/src/app/layout/meet-kenny/meet-kenny.component.html
@@ -1,4 +1,4 @@
-<main class="pt-1 pt-4">
+<main class="mt pt-4">
     <section id="top0" class="kanny-content">
         <div class="container">
             <div class="contentallkanny">
