--- a/src/app/layout/podcast/podcast.component.html
+++ b/src/app/layout/podcast/podcast.component.html
@@ -1,4 +1,4 @@
-<main class="pt-1">
+<main class="mt">
         <section class="book-section podcast-banner">
             <div class="container">
                 <div class="book-row">
