--- a/src/app/layout/worst-day-cycle/worst-day-cycle.component.html
+++ b/src/app/layout/worst-day-cycle/worst-day-cycle.component.html
@@ -1,4 +1,4 @@
- <main class="pt-1">
+ <main class="mt">
         <section class="wordsendsicyel">
             <div class="container">
                 <div class="flexwordsendcycal">
@@ -114,7 +114,7 @@
                                         <span>By Kenny</span>
                                     </div>
                                 </div>
-                                <a href="#" class="button abslut">
+                                <a routerLink="/" class="button abslut">
                                     Read More <span class="arrow"><i class="fa-solid fa-arrow-right"></i></span>
                                 </a>
 
@@ -145,7 +145,7 @@
                                         <span>By Kenny</span>
                                     </div>
                                 </div>
-                                <a href="#" class="button abslut">
+                                 <a routerLink="/" class="button abslut">
                                     Read More <span class="arrow"><i class="fa-solid fa-arrow-right"></i></span>
                                 </a>
 
@@ -177,7 +177,7 @@
                                         <span>By Kenny</span>
                                     </div>
                                 </div>
-                                <a href="#" class="button abslut">
+                                <a routerLink="/" class="button abslut">
                                     Read More <span class="arrow"><i class="fa-solid fa-arrow-right"></i></span>
                                 </a>
 
@@ -209,7 +209,7 @@
                                         <span>By Kenny</span>
                                     </div>
                                 </div>
-                                <a href="#" class="button abslut">
+                               <a routerLink="/" class="button abslut">
                                     Read More <span class="arrow"><i class="fa-solid fa-arrow-right"></i></span>
                                 </a>
 
@@ -243,7 +243,7 @@
                                         <span>By Kenny</span>
                                     </div>
                                 </div>
-                                <a href="#" class="button abslut">
+                               <a routerLink="/" class="button abslut">
                                     Read More <span class="arrow"><i class="fa-solid fa-arrow-right"></i></span>
                                 </a>
 
@@ -275,7 +275,7 @@
                                         <span>By Kenny</span>
                                     </div>
                                 </div>
-                                <a href="#" class="button abslut">
+                                <a routerLink="/" class="button abslut">
                                     Read More <span class="arrow"><i class="fa-solid fa-arrow-right"></i></span>
                                 </a>
 
