--- a/src/app/layout/resources/resources.component.html
+++ b/src/app/layout/resources/resources.component.html
@@ -1,4 +1,4 @@
-<main class="pt-1">
+<main class="mt">
         <section class="resourcesmain-section">
             <div class="container">
                 <div class="resourcsertymain">
@@ -175,7 +175,7 @@
                                         </div>
                                     </div>
                                     <div class="submitebut">
-                                        <button class="button">Submit</button>
+                                        <button class="button whitebt">Submit</button>
                                     </div>
                                 </div>
                             </div>
@@ -210,7 +210,7 @@
                                         </div>
                                     </div>
                                     <div class="submitebut">
-                                        <button class="button">Submit</button>
+                                        <button class="button whitebt">Submit</button>
                                     </div>
                                 </div>
                             </div>
@@ -240,7 +240,7 @@
                                         </div>
                                     </div>
                                     <div class="submitebut">
-                                        <button class="button">Submit</button>
+                                        <button class="button whitebt">Submit</button>
                                     </div>
                                 </div>
                             </div>
@@ -276,7 +276,7 @@
                                         </div>
                                     </div>
                                     <div class="submitebut">
-                                        <button class="button">Submit</button>
+                                        <button class="button whitebt">Submit</button>
                                     </div>
                                 </div>
                             </div>
@@ -308,7 +308,7 @@
                                         </div>
                                     </div>
                                     <div class="submitebut">
-                                        <button class="button">Submit</button>
+                                        <button class="button whitebt">Submit</button>
                                     </div>
                                 </div>
                             </div>
@@ -343,7 +343,7 @@
                                         </div>
                                     </div>
                                     <div class="submitebut">
-                                        <button class="button">Submit</button>
+                                        <button class="button whitebt">Submit</button>
                                     </div>
                                 </div>
                             </div>
